# ledstrip

./: .editorconfig  .gitmodules  CMakeLists.txt  README  README.md  flashall.sh  test.c  uart.c
src/: analog.c  analog.h  command.h  commands.c  commands.h  font.h  input.h  led.cpp  led.h  main.c  main.h  mode.c  mode.h  msgeq7.c  msgeq7.h  print.h  settings.c  settings.h  ssd1306.c  ssd1306.h  term.c  term.h  time.c  time.h  uart.c  uart.h  util.c  util.h  var.h  vars.c  vars.h
src/mode/: cycle.c  cycle.h  music.c  music.h  static.c  static.h
